--- a/mqtt_demo/ws_motor/index.html
+++ b/mqtt_demo/ws_motor/index.html
@@ -8,11 +8,12 @@
     <script src="js/highcharts/js/highcharts.js"></script>
     <script src="js/highcharts/js/themes/gray.js"></script>
     <script src="js/browserMqtt.js"></script>
+    <script src="js/angular-MQTT.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="js/highcharts/css/highcharts.css">
 </head>
-<body>
+<body ng-app="myapp" ng-controller="indexCtrl">
     <h1>VigoLabs</h1>
     <div id="container" style="width:100%; height:400px;"></div>
 </body>
