--- a/mqtt_demo/ws_motor/index.html
+++ b/mqtt_demo/ws_motor/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>VigoLabs MQTT Demo</title>
-    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/angular.min.js"></script>
-    <script src="js/highcharts/js/highcharts.js"></script>
-    <script src="js/highcharts/js/themes/gray.js"></script>
     <script src="js/browserMqtt.js"></script>
     <script src="js/angular-MQTT.js"></script>
+    <script src="js/highcharts/js/highcharts.js"></script>
+    <script src="js/highcharts-ng/dist/highcharts-ng.js"></script>
+    <script src="js/highcharts/js/themes/gray.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="js/highcharts/css/highcharts.css">
-</head>
-<body ng-app="myapp" ng-controller="indexCtrl">
-    <h1>VigoLabs</h1>
-    <div id="container" style="width:100%; height:400px;"></div>
+    <link rel="stylesheet" href="js/highcharts/css/highcharts.css"> </head>
+
+<body>
+    <div ng-app="myapp">
+        <div class="row">
+            <div ng-controller="myctrl">
+                <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
